# steampipe-conn-generator-for-aws-organization

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
src/: genspc4awsorg.py
src/genspc4awsorg/: __main__.py
src/genspc4awsorg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/steampipe_conn_generator_for_aws_organization.egg-info/: PKG-INFO  SOURCES.txt
test/: genspc4awsorg.py
