[metadata]
name = steampipe-conn-generator-for-aws-organization
version = 0.1.0
author = Henry Huo
author_email = happy78@live.com
description = Generate steampipe connection file(.spc) for accounts and OUs in specified AWS organization. Before run this script, please make sure correct AWS credential in envs(using aws-vault is recommend), and base credential profile which can AssumeRole to accounts accross organization has been configured.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/happy240/steampipe-conn-generator-for-aws-organization
project_urls =
    Bug Tracker = https://github.com/happy240/steampipe-conn-generator-for-aws-organization/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src